distros/T/Test-UsedModules/t/resource/lib/Test/UsedModules/Fail/2.pm
package Test::UsedModules::Fail::2;
use strict;
use warnings;
use utf8;

use File::Basename ();

1;
